--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+#
+
+*.xcodeproj
+Pods
 
 ## User settings
 xcuserdata/
